# robotic-arms

./: README.md
kuavo_opensource-dev/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  package.xml  readme.md
kuavo_opensource-dev/demo/demo_action/: arm_move_X.py  arm_specific_actions.py  kuavoRobotSDK.py  utils.py  walk_rectangle.py
kuavo_opensource-dev/docs/: Show_how_to_use_demo.md  base_useage.md  code_instruction.md  common_utils.md  control_nuc_ros1.md  control_qiangnao_hand_tool.md  h12pro_controller_node_readme.md  joint_offset_dynamic_reload.md  keyboard_control_kuavo.md  kuaovo_docker_env.md  kuavo_version_switch_tool.md  log_tool.md  question_and_answer.md  setup_report_robot_network_info_startup.md  upload_kuavo_log_tool.md  use_AI_gen_CHANGELOG.md
kuavo_opensource-dev/docs/硬件配置/: KUAVO_Power_20240627.hex  imu串口配置.md  kuavo_power 烧录 串口product 设置.md
kuavo_opensource-dev/lcm/: CMakeLists.txt  lcm_sensor_msgs.lcm  lcm_std_msg.lcm  lcm_system.lcm
kuavo_opensource-dev/lib/DynamixelSDK/src/: dynamixel_interface.h
kuavo_opensource-dev/lib/EC_Master/: setupEnv.sh  teardownEnv.sh
kuavo_opensource-dev/lib/EC_Master/config/: elmo_14_c500.xml  elmo_18_c500.xml  elmo_18_ct_500_current.xml  elmo_18_eni.xml  elmo_1_c_500.xml  elmo_1_ct_1000_master.xml  elmo_1_ct_500_current.xml  elmo_1_ct_500_master.xml  elmo_1_eni.xml  elmo_20_c500.xml  elmo_20_ct_500_current.xml  elmo_22_c500.xml  elmo_24_c500.xml  elmo_2_c_500.xml  elmo_2_eni.xml  elmo_3_c_500.xml  elmo_3_ct_500.xml  elmo_3_eni.xml  elmo_8_c_500.xml  elmo_8_ct_500.xml  offset.csv
kuavo_opensource-dev/lib/EC_Master/src/: CMakeLists.txt
kuavo_opensource-dev/lib/Math/: MathUtilities.h  cppTypes.h  orientation_tools.h  savedata.h
kuavo_opensource-dev/lib/Predict_Fp/: Predict_Fp.hpp
kuavo_opensource-dev/lib/hand_sdk/: generate_serial_rules.sh  hand_sdk.h  main_mtr_shared.pb-c.h  main_to_mtr.pb-c.h  mtr_to_main.pb-c.h  softCRC.h  stark_common.pb-c.h
kuavo_opensource-dev/lib/hand_sdk/kuavo_brainco_hand_ota/: CMakeLists.txt  README.md  VERSION  main.py  ota.cpp  rs485.c  setup.sh
kuavo_opensource-dev/lib/hand_sdk/proto/: main_mtr_shared.proto  main_to_mtr.proto  mtr_to_main.proto  stark_common.proto
kuavo_opensource-dev/lib/jodell_claw_driver/include/: jodell_claw_driver.h  jodell_tool.h
kuavo_opensource-dev/lib/motioncapture/: motionClient.h
kuavo_opensource-dev/lib/motioncapture/include/: SeekerSDKClient.h  SeekerSDKTypes.h  Utility.h
kuavo_opensource-dev/lib/ruierman_controller/: Demo.py  SimpleSDK.py  ruierman_actuator.h  ruierman_actuator.py  ruierman_control_ros.py  setID.py  setZero.py
kuavo_opensource-dev/lib/ruiwo_controller/: CMakeLists.txt  Negtive.py  Negtive.sh  Scan.py  Scan.sh  Setzero.py  Setzero.sh  SimpleSDK.py  readme.md  ruiwo_actuator.cpp  ruiwo_actuator.h  ruiwo_actuator.py  ruiwo_test.cpp  ruiwo_test.py  ruiwo_test.sh
kuavo_opensource-dev/lib/ruiwo_controller/config/: config12.yaml  config14.yaml  config8.yaml
kuavo_opensource-dev/lib/ruiwo_controller/python-can-3.3.4/: .gitignore
kuavo_opensource-dev/lib/ruiwo_controller_cxx/include/: ruiwoSDK.h  ruiwo_actuator.h
kuavo_opensource-dev/lib/xsens_ros_mti_driver/lcmtypes/: CMakeLists.txt  lcm_sensor_msgs.lcm
kuavo_opensource-dev/lib/xsens_ros_mti_driver/param/: xsens_mti_node.yaml
kuavo_opensource-dev/lib/xsens_ros_mti_driver/src/: imu_receiver.h  xdacallback.h  xdainterface.h
kuavo_opensource-dev/models/: stl2obj.py
kuavo_opensource-dev/models/biped_gen2/: CMakeLists.txt
kuavo_opensource-dev/models/biped_gen2.3/: package.xml
kuavo_opensource-dev/models/biped_gen2.3/meshes/: l_arm_yaw.STL  l_foot_roll.STL  l_l_bar_y.STL  r_arm_pitch.STL  r_arm_yaw.STL  r_foot_pitch.STL  r_leg_pitch.STL  r_leg_roll.STL  r_r_bar_y.STL  r_r_tendon_y.STL
kuavo_opensource-dev/models/biped_gen2.3/urdf/: NewKuavo.urdf  NewKuavo_all_joint.urdf  Rleg.urdf
kuavo_opensource-dev/models/biped_gen2/config/: joint_names_HHH_Kuavo_V2_New.yaml
kuavo_opensource-dev/models/biped_gen4.1/: package.xml
kuavo_opensource-dev/models/biped_mt-1.0/: CMakeLists.txt
kuavo_opensource-dev/ros_package/: CMakeLists.txt  readme.md
kuavo_opensource-dev/ros_package/launch/: highly_dynamic_robot.launch
kuavo_opensource-dev/ros_package/msg/: EndEffectorStateStamped.msg  armTargetPoses.msg  robotArmPose.msg  robotArmQVVD.msg  robotHandPosition.msg  robotHeadMotionData.msg  robotImuGyroAcc.msg  robotPhase.msg  walkCommand.msg
kuavo_opensource-dev/ros_package/src/: main.cc
kuavo_opensource-dev/ros_package/srv/: UpdateTorsoRPY.srv  changeHandArmPosesByConfigName.srv  comPosition.srv  controlEndHand.srv  controlJodellClaw.srv  getComPosition.srv  getTorsoRPY.srv  srvArmIK.srv  srvchangeCtlMode.srv
kuavo_opensource-dev/src/: CMakeLists.txt
kuavo_opensource-dev/src/common/: FSMState.h  FSMStateError.h  FSMStateJump.h  FSMStateSquat.h  FSMStateStand.h  FSMStateWalk.h  Kalman.h  RobotErrorTypes.h  common_sys.h  csv_player.h  csv_reader.h  forceDisturber.h  kalman_estimate.h  lcm_logger.h  lcm_publish.h  robotStateStorage.h  robotStateTransform.h  robot_state.h  sensor_data.h  sim_sensor.h  traj.h  utils.h
kuavo_opensource-dev/src/controller/: controller.h  joint_controller.h  pb_controller.h  tendon_controller.h
kuavo_opensource-dev/src/demos/: CMakeLists.txt
kuavo_opensource-dev/src/estimator/: ankle_solver.h  state_estimation.h
kuavo_opensource-dev/src/hardware/: actuators_interface.h  hardware_plant.h
kuavo_opensource-dev/src/opensource/: CMakeLists.txt
kuavo_opensource-dev/src/planner/: Interpolator.h  Trajectory.h  plantIK.h
kuavo_opensource-dev/tools/: install_deps.sh  lcm_gen.sh  lcm_spy.sh  ubuntu_packages_with_versions.txt  urdf_cuter.py
kuavo_opensource-dev/tools/check_tool/: EtherCAT_license.sh  Hardware_tool.py  claw_rs485.py  compile_kuavo.sh  compile_kuavo_opensource.sh  creat_remote_udev_rule.sh  dynamixel_servo.py  elmoZeroRead.py  folder_backups.sh  generate_serial.sh  hand_grab_test.sh  hand_test  readme.md  ruiwo_negtive_set.sh  ruiwo_zero_set.sh  update_kuavo.sh  update_kuavo_opensource.sh  usbHand485.py
(+536 files in other folders)
