<?xml version="1.0"?>
<package format="2">
  <name>dynamic_biped</name>
  <version>0.0.0</version>
  <description>The dynamic_biped package</description>
  <maintainer email="hzc@lejurobot.com">HeZhiCheng</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
